tests/spec/parse/snapshots/precedence_addition_equal.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { let result = a + b == c; }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "result",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 17,
                                    byte_length: 6,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Binary {
                            operator: Equal,
                            left: Binary {
                                operator: Addition,
                                left: Identifier {
                                    value: "a",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 26,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                right: Identifier {
                                    value: "b",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 30,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 26,
                                    byte_length: 5,
                                },
                            },
                            right: Identifier {
                                value: "c",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 35,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 26,
                                byte_length: 10,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 23,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 28,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 38,
        },
    },
]
